$Id: NEWS,v 1.115 2005-06-09 22:07:13 karl Exp $
This NEWS file records noteworthy changes, very tersely.
See the manual for detailed information.

  Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
  2001, 2002, 2003, 2004, 2005 Free Software Foundation, Inc.

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.


*** IMPORTANT NEWS FOR ALL AUTHORS OF TEXINFO MANUALS ***

As of version 4.2, Texinfo has a new command @copying to define the
copyright and copying permissions for a manual.  It's important to
switch to using it as soon as possible (as in your next release),
because the historical method of doing copyright permissions using
@ifinfo failed to output copyright information in the HTML (or XML)
formats.  The manual has detailed explanations and examples.  For
convenience, here's a url to one of the relevant sections:
  http://www.gnu.org/software/texinfo/manual/texinfo/html_node/Document-Permissions.html

-------------------------------------------------------------------------------
* Language:
  . new command @allowcodebreaks to control breaks at _ and - within @code.
  . new command @frenchspacing to control spacing after sentences.
* texi2dvi:
  . new mode --build=tidy which supports compilation in a separate
    directory, where intermediate files are preserved.
* texinfo.tex:
  . section names with \ characters work properly in pdf outlines.
  . .toc files use @ as the escape character, instead of \.
* info:
  . look for info files in the current directory first, by default.
  . when calling man, use -a if no explicit section is found.
* Distribution:
  . automake 1.9.5, gettext 0.14.5.
  . gettext support now [external].
  . new translation: rw (Kinyarwandan).


4.8 (31 December 2004)
* Language:
  . new command @euro for the Euro currency symbol, and
    @documentencoding has some support for ISO-8859-15.